force-app/main/default/objects/Airport_Operation__c/Airport_Operation__c.object-meta.xml
<CustomObject>
    <description>Custom object storing flight schedule for airport operation</description>
    <label>Airport Operation</label>
    <nameField>
        <label>Flight Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airport Operation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>