force-app/main/default/objects/Airport_Operation__c/fields/AIRBORNE_Date__c.field-meta.xml
<CustomField>
    <fullName>AIRBORNE_Date__c</fullName>
    <label>AIRBORNE Date</label>
    <type>Date</type>
</CustomField>