force-app/main/default/objects/Airport_Operation__c/fields/AIRBORNE_Time__c.field-meta.xml
<CustomField>
    <fullName>AIRBORNE_Time__c</fullName>
    <label>AIRBORNE Time</label>
    <type>Time</type>
</CustomField>