force-app/main/default/objects/Airport_Operation__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <label>ARR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airport_Location</valueSetName>
    </valueSet>
</CustomField>