force-app/main/default/objects/Airport_Operation__c/fields/ARR_Below_Wing_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>ARR_Below_Wing_Current_Stage__c</fullName>
    <label>ARR-Below Wing Current Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>