force-app/main/default/objects/Airport_Operation__c/fields/ARR_Below_Wing_Current_Stage_Compl_Time__c.field-meta.xml
<CustomField>
    <fullName>ARR_Below_Wing_Current_Stage_Compl_Time__c</fullName>
    <label>ARR-Below Wing Current Stage Compl Time</label>
    <type>Time</type>
</CustomField>