force-app/main/default/objects/Airport_Operation__c/fields/ARR_Below_Wing_Current_Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>ARR_Below_Wing_Current_Stage_Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stores the current list order of the latest checklist completed for Below Wing</description>
    <label>ARR-Below Wing Current Stage Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>