force-app/main/default/objects/Airport_Operation__c/fields/ARR_Gate__c.field-meta.xml
<CustomField>
    <fullName>ARR_Gate__c</fullName>
    <label>ARR Gate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>