force-app/main/default/objects/Airport_Operation__c/fields/Arrival_Flight_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Flight_Date_Local__c</fullName>
    <label>ARR Date</label>
    <type>Date</type>
</CustomField>