force-app/main/default/objects/Airport_Operation__c/fields/Arrival_Flight_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Flight_Date_UTC__c</fullName>
    <label>Arrival Flight Date(UTC)</label>
    <type>Date</type>
</CustomField>