force-app/main/default/objects/Airport_Operation__c/fields/ATA_Date__c.field-meta.xml
<CustomField>
    <fullName>ATA_Date__c</fullName>
    <label>ONBLOCK Date (ATA)</label>
    <type>Date</type>
</CustomField>