force-app/main/default/objects/Airport_Operation__c/fields/ATA_Time__c.field-meta.xml
<CustomField>
    <fullName>ATA_Time__c</fullName>
    <label>ATA</label>
    <type>Time</type>
</CustomField>