force-app/main/default/objects/Airport_Operation__c/fields/ATD_Date__c.field-meta.xml
<CustomField>
    <fullName>ATD_Date__c</fullName>
    <label>OFFBLOCK Date (ATD)</label>
    <type>Date</type>
</CustomField>