force-app/main/default/objects/Airport_Operation__c/fields/ATD_Time__c.field-meta.xml
<CustomField>
    <fullName>ATD_Time__c</fullName>
    <label>ATD</label>
    <type>Time</type>
</CustomField>