force-app/main/default/objects/Airport_Operation__c/fields/DEP__c.field-meta.xml
<CustomField>
    <fullName>DEP__c</fullName>
    <label>DEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airport_Location</valueSetName>
    </valueSet>
</CustomField>