force-app/main/default/objects/Airport_Operation__c/fields/DEP_Above_Wing_Current_Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>DEP_Above_Wing_Current_Stage_Order__c</fullName>
    <label>DEP-Above Wing Current Stage Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>