force-app/main/default/objects/Airport_Operation__c/fields/DEP_Below_Wing_Current_Stage_Order__c.field-meta.xml
<CustomField>
    <fullName>DEP_Below_Wing_Current_Stage_Order__c</fullName>
    <label>DEP-Below Wing Current Stage Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>