force-app/main/default/objects/Airport_Operation__c/fields/DEP_Gate__c.field-meta.xml
<CustomField>
    <fullName>DEP_Gate__c</fullName>
    <label>DEP Gate</label>
    <length>10</length>
    <type>Text</type>
</CustomField>