force-app/main/default/objects/Airport_Operation__c/fields/Departure_Flight_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>Departure_Flight_Date_Local__c</fullName>
    <label>DEP Date</label>
    <type>Date</type>
</CustomField>