force-app/main/default/objects/Airport_Operation__c/fields/Departure_Flight_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Departure_Flight_Date_UTC__c</fullName>
    <label>Departure Flight Date(UTC)</label>
    <type>Date</type>
</CustomField>