force-app/main/default/objects/Airport_Operation__c/fields/Diverting_Airport__c.field-meta.xml
<CustomField>
    <fullName>Diverting_Airport__c</fullName>
    <label>Diverting Airport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airport_Location</valueSetName>
    </valueSet>
</CustomField>