force-app/main/default/objects/Airport_Operation__c/fields/DL_Code_2__c.field-meta.xml
<CustomField>
    <fullName>DL_Code_2__c</fullName>
    <label>Delay Code 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>