force-app/main/default/objects/Airport_Operation__c/fields/ETA_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>ETA_Date_Local__c</fullName>
    <label>ETA Date(Local)</label>
    <type>Date</type>
</CustomField>