force-app/main/default/objects/Airport_Operation__c/fields/ETA_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>ETA_Date_UTC__c</fullName>
    <label>ETA Date(UTC)</label>
    <type>Date</type>
</CustomField>