force-app/main/default/objects/Airport_Operation__c/fields/ETA_Offset__c.field-meta.xml
<CustomField>
    <fullName>ETA_Offset__c</fullName>
    <label>ETA Offset</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>