force-app/main/default/objects/Airport_Operation__c/fields/ETA_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>ETA_Time_Local__c</fullName>
    <label>ETA</label>
    <type>Time</type>
</CustomField>