force-app/main/default/objects/Airport_Operation__c/fields/ETA_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>ETA_Time_UTC__c</fullName>
    <label>ETA Time(UTC)</label>
    <type>Time</type>
</CustomField>