force-app/main/default/objects/Airport_Operation__c/fields/ETD_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>ETD_Date_Local__c</fullName>
    <label>ETD Date(Local)</label>
    <type>Date</type>
</CustomField>