force-app/main/default/objects/Airport_Operation__c/fields/ETD_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>ETD_Date_UTC__c</fullName>
    <label>ETD Date(UTC)</label>
    <type>Date</type>
</CustomField>