force-app/main/default/objects/Airport_Operation__c/fields/ETD_Offset__c.field-meta.xml
<CustomField>
    <fullName>ETD_Offset__c</fullName>
    <label>ETD Offset</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>