force-app/main/default/objects/Airport_Operation__c/fields/ETD_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>ETD_Time_Local__c</fullName>
    <label>ETD</label>
    <type>Time</type>
</CustomField>