force-app/main/default/objects/Airport_Operation__c/fields/ETD_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>ETD_Time_UTC__c</fullName>
    <label>ETD Time(UTC)</label>
    <type>Time</type>
</CustomField>