force-app/main/default/objects/Airport_Operation__c/fields/Flight_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Date__c</fullName>
    <formula>Departure_Flight_Date_Local__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Date</label>
    <type>Date</type>
</CustomField>