force-app/main/default/objects/Airport_Operation__c/fields/FLT_Carrier__c.field-meta.xml
<CustomField>
    <fullName>FLT_Carrier__c</fullName>
    <label>Flight Carrier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>