force-app/main/default/objects/Airport_Operation__c/fields/LANDING_Date__c.field-meta.xml
<CustomField>
    <fullName>LANDING_Date__c</fullName>
    <label>LANDING Date</label>
    <type>Date</type>
</CustomField>