force-app/main/default/objects/Airport_Operation__c/fields/LANDING_Time__c.field-meta.xml
<CustomField>
    <fullName>LANDING_Time__c</fullName>
    <label>LANDING Time</label>
    <type>Time</type>
</CustomField>