force-app/main/default/objects/Airport_Operation__c/fields/No_of_Baggage_Final_W__c.field-meta.xml
<CustomField>
    <fullName>No_of_Baggage_Final_W__c</fullName>
    <label>No. of Baggage(Final - W)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>