force-app/main/default/objects/Airport_Operation__c/fields/No_of_Baggage_Final_Y__c.field-meta.xml
<CustomField>
    <fullName>No_of_Baggage_Final_Y__c</fullName>
    <label>Y Bag pcs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>