force-app/main/default/objects/Airport_Operation__c/fields/No_of_Crews_Cabin__c.field-meta.xml
<CustomField>
    <fullName>No_of_Crews_Cabin__c</fullName>
    <label>Cabin Crew</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>