force-app/main/default/objects/Airport_Operation__c/fields/No_of_Crews_Cockpit__c.field-meta.xml
<CustomField>
    <fullName>No_of_Crews_Cockpit__c</fullName>
    <label>Cockpit Crew</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>