force-app/main/default/objects/Airport_Operation__c/fields/No_of_PAX_Booked_J__c.field-meta.xml
<CustomField>
    <fullName>No_of_PAX_Booked_J__c</fullName>
    <label>J CLS (Booked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>