force-app/main/default/objects/Airport_Operation__c/fields/No_of_PAX_Final_F__c.field-meta.xml
<CustomField>
    <fullName>No_of_PAX_Final_F__c</fullName>
    <label>No. of PAX(Final - F)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>