force-app/main/default/objects/Airport_Operation__c/fields/No_of_PAX_Protected_Infant__c.field-meta.xml
<CustomField>
    <fullName>No_of_PAX_Protected_Infant__c</fullName>
    <label>No. of PAX(Protected - Infant)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>