force-app/main/default/objects/Airport_Operation__c/fields/OPS_ID__c.field-meta.xml
<CustomField>
    <fullName>OPS_ID__c</fullName>
    <description>The OPS is the source for flight schedule data. This is a unique record identifier from OPS system. It is used by DIH to upsert flight schedule data into Salesforce.</description>
    <externalId>true</externalId>
    <label>OPS ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>