force-app/main/default/objects/Airport_Operation__c/fields/OPS_Status__c.field-meta.xml
<CustomField>
    <fullName>OPS_Status__c</fullName>
    <formula>&quot;Not Applicable&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPS Status</label>
    <type>Text</type>
</CustomField>