force-app/main/default/objects/Airport_Operation__c/fields/Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Reg_Number__c</fullName>
    <label>Reg Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>