force-app/main/default/objects/Airport_Operation__c/fields/STA_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>STA_Date_Local__c</fullName>
    <label>STA Date(Local)</label>
    <type>Date</type>
</CustomField>