force-app/main/default/objects/Airport_Operation__c/fields/STA_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>STA_Date_UTC__c</fullName>
    <label>STA Date(UTC)</label>
    <type>Date</type>
</CustomField>