force-app/main/default/objects/Airport_Operation__c/fields/STA_TIme_Local__c.field-meta.xml
<CustomField>
    <fullName>STA_TIme_Local__c</fullName>
    <label>STA</label>
    <type>Time</type>
</CustomField>