force-app/main/default/objects/Airport_Operation__c/fields/STA_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>STA_Time_UTC__c</fullName>
    <label>STA Time(UTC)</label>
    <type>Time</type>
</CustomField>