force-app/main/default/objects/Airport_Operation__c/fields/STATE__c.field-meta.xml
<CustomField>
    <fullName>STATE__c</fullName>
    <label>STATE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>SKD</fullName>
            </value>
            <value>
                <fullName>ETD</fullName>
            </value>
            <value>
                <fullName>NXI</fullName>
            </value>
            <value>
                <fullName>OUT</fullName>
            </value>
            <value>
                <fullName>DEP</fullName>
            </value>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>ARR</fullName>
            </value>
            <value>
                <fullName>DIV</fullName>
            </value>
            <value>
                <fullName>RTR</fullName>
            </value>
            <value>
                <fullName>CNL</fullName>
            </value>
            <value>
                <fullName>RTO</fullName>
                <isActive>false</isActive>
                <label>RTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>