force-app/main/default/objects/Airport_Operation__c/fields/STD_Date_Local__c.field-meta.xml
<CustomField>
    <fullName>STD_Date_Local__c</fullName>
    <label>STD Date(Local)</label>
    <type>Date</type>
</CustomField>