force-app/main/default/objects/Airport_Operation__c/fields/STD_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>STD_Date_UTC__c</fullName>
    <label>STD Date(UTC)</label>
    <type>Date</type>
</CustomField>