force-app/main/default/objects/Airport_Operation__c/fields/STD_Time_Local__c.field-meta.xml
<CustomField>
    <fullName>STD_Time_Local__c</fullName>
    <label>STD</label>
    <type>Time</type>
</CustomField>