force-app/main/default/objects/Airport_Operation__c/fields/STD_Time_UTC__c.field-meta.xml
<CustomField>
    <fullName>STD_Time_UTC__c</fullName>
    <label>STD Time(UTC)</label>
    <type>Time</type>
</CustomField>