force-app/main/default/objects/Airport_Operation__c/fields/Suffix_Code__c.field-meta.xml
<CustomField>
    <fullName>Suffix_Code__c</fullName>
    <label>Suffix Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>