force-app/main/default/objects/Airport_Operation__c/listViews/All_Flights_of_FUK_Last_Week.listView-meta.xml
<ListView>
    <fullName>All_Flights_of_FUK_Last_Week</fullName>
    <booleanFilter>1 AND (2 or 3)</booleanFilter>
    <columns>Flight_Date__c</columns>
    <columns>NAME</columns>
    <columns>Reg_Number__c</columns>
    <columns>DEP__c</columns>
    <columns>ARR__c</columns>
    <columns>STD_Time_Local__c</columns>
    <columns>STA_TIme_Local__c</columns>
    <columns>ATD_Time__c</columns>
    <columns>AIRBORNE_Time__c</columns>
    <columns>LANDING_Time__c</columns>
    <columns>ATA_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flight_Date__c</field>
        <operation>equals</operation>
        <value>LAST_WEEK</value>
    </filters>
    <filters>
        <field>DEP__c</field>
        <operation>equals</operation>
        <value>FUK</value>
    </filters>
    <filters>
        <field>ARR__c</field>
        <operation>equals</operation>
        <value>FUK</value>
    </filters>
    <label>All Flights of FUK Last Week</label>
    <sharedTo>
        <role>Airport_Manager_KIX</role>
    </sharedTo>
</ListView>